# tui_video

./: .gitignore  Cargo.toml  README.md
main/: Cargo.toml
main/examples/ffmpeg_next/: README.md  ffmpeg_next.rs  main.rs
main/src/: app.rs  ascii.rs  ffmpeg_fn.rs  lib.rs  main.rs  tui.rs  video.rs
src/: ascii.rs  ffmpeg_fn.rs  main.rs  tui.rs  video.rs
